--- a/08/index.html
+++ b/08/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>智能计算系统框架开发部署组件</title>
+    <title>算法功能开发支持工具</title>
     <style>
         body {
             margin: 0;
