--- a/09/index.html
+++ b/09/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>智能计算系统框架开发部署组件</title>
+    <title>基础运算开发支持工具</title>
     <style>
         body {
             margin: 0;
@@ -339,7 +339,7 @@
         </div>
 
         <div class="center-panel">
-            <h2>算子显示</h2>
+            <h2>模型展示</h2>
             <div class="panel-content">
                 <div id="model-display" class="empty-content">点击"模型解析"按钮查看模型结构图</div>
             </div>
