--- a/10/index.html
+++ b/10/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>基础运算开发支持工具</title>
+    <title>算法接口转换开发支持工具</title>
     <style>
         body {
             margin: 0;
@@ -304,7 +304,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">基础运算开发支持工具</h1>
+        <h1 class="title">算法接口转换开发支持工具</h1>
         <img src="logo.png" alt="Logo" class="logo">
     </div>
     <div class="container">
