--- a/12/index.html
+++ b/12/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>框架数据验证支持组件</title>
+    <title>算子/算法级移植结果验证分析组件</title>
     <style>
         body {
             margin: 0;
@@ -413,7 +413,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">框架数据验证支持组件</h1>
+        <h1 class="title">算子/算法级移植结果验证分析组件</h1>
         <img src="logo.png" alt="Logo" class="logo">
     </div>
     <div class="container">
