--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
             <h1 class="sidebar-title">智能模型解析</h1>
         </div>
         <button data-page="home" class="nav-item" style="--i:0">🏠 系统主页</button>
-        <button data-page="07/index.html" class="nav-item" style="--i:1">🔧 7</button>
-        <button data-page="08/index.html" class="nav-item" style="--i:2">⚙️ 8</button>
-        <button data-page="09/index.html" class="nav-item" style="--i:3">🧠 9</button>
-        <button data-page="10/index.html" class="nav-item" style="--i:4">🚀 10</button>
-        <button data-page="11/index.html" class="nav-item" style="--i:5">📊 11</button>
-        <button data-page="12/index.html" class="nav-item" style="--i:6">⚡ 12</button>
+        <button data-page="07/index.html" class="nav-item" style="--i:1">🔧 算法解析</button>
+        <button data-page="08/index.html" class="nav-item" style="--i:2">⚙️ 功能开发</button>
+        <button data-page="09/index.html" class="nav-item" style="--i:3">🧠 基础运算</button>
+        <button data-page="10/index.html" class="nav-item" style="--i:4">🚀 接口转换</button>
+        <button data-page="11/index.html" class="nav-item" style="--i:5">📊 任务验证</button>
+        <button data-page="12/index.html" class="nav-item" style="--i:6">⚡ 数据验证</button>
     </div>
     <div class="content" id="mainContent">
         <div class="home-content">
