--- a/11/index.html
+++ b/11/index.html
@@ -285,40 +285,31 @@
             background: #2980b9;
         }
         .results-preview {
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-            margin-top: 10px;
-            width: 100%;  /* 确保宽度不超过容器 */
-            overflow-x: auto;  /* 添加水平滚动条 */
-        }
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 10px;
+    width: 100%;  /* 确保宽度不超过容器 */
+    overflow-x: auto;  /* 添加水平滚动条 */
+}
 
-        .result-preview-box {
-            min-width: 120px;  /* 设置最小宽度 */
-            max-width: 180px;  /* 设置最大宽度 */
-            padding: 8px;
-            box-sizing: border-box;  /* 包含padding在宽度内 */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            width: auto;
-            box-sizing: border-box;
-            padding: 8px 12px;
-        }
+.result-preview-box {
+    min-width: 120px;  /* 设置最小宽度 */
+    max-width: 180px;  /* 设置最大宽度 */
+    padding: 8px;
+    box-sizing: border-box;  /* 包含padding在宽度内 */
+}
 
-        .preview-content {
-            width: 100%;  /* 宽度填满容器 */
-            min-height: 60px;
-            max-width: 100%;  /* 确保不超出父容器 */
-        }
+.preview-content {
+    width: 100%;  /* 宽度填满容器 */
+    min-height: 60px;
+    max-width: 100%;  /* 确保不超出父容器 */
+}
 
 /* 保留原有的悬停效果 */
 .result-preview-box:hover {
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     transform: translateY(-2px);
-    white-space: nowrap;  /* 防止换行 */
-    padding: 10px 10px;  /* 调整内边距 */
 }
 
 /* 保留原有的标签和内容样式 */
@@ -330,6 +321,19 @@
     font-weight: 500;
     color: #3498db;
     margin-bottom: 5px;
+}
+
+.result-preview-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: auto;
+    box-sizing: border-box;
+    padding: 8px 12px;
+}
+
+.preview-label {
     flex-shrink: 0;
     margin-right: 10px;
 }
@@ -346,6 +350,11 @@
     font-size: 15px;
     font-weight: 500;
     color: #3498db;
+}
+
+.result-preview-box {
+    white-space: nowrap;  /* 防止换行 */
+    padding: 10px 10px;  /* 调整内边距 */
 }
     </style>
 </head>
