--- a/09/index.html
+++ b/09/index.html
@@ -106,7 +106,7 @@
             min-width: 40px;
         }
 
-        #logOutput, #modelDisplay {
+        #logOutput, #model-display {
             width: 100%;
             height: 100%;
             border: 1px solid #eee;
@@ -263,17 +263,6 @@
         .logo {
             height: 40px;
             width: auto;
-        }
-        #logOutput, #modelDisplay {
-            width: 100%;
-            height: 100%;
-            border: 1px solid #eee;
-            border-radius: 4px;
-            padding: 10px;
-            box-sizing: border-box;
-            font-family: monospace;
-            white-space: pre-wrap;
-            background-color: #fafafa;
         }
         .result-content {
             flex: 1;
