--- a/12/index.html
+++ b/12/index.html
@@ -106,7 +106,7 @@
             min-width: 40px;
         }
 
-        #logOutput, #modelDisplay {
+        #logOutput, #highResultDisplay,#AIDisplay,#compareDisplay,#dataDisplay,#model-display   {
             width: 100%;
             height: 100%;
             border: 1px solid #eee;
