--- a/08/index.html
+++ b/08/index.html
@@ -106,7 +106,7 @@
             min-width: 40px;
         }
 
-        #logOutput, #modelDisplay {
+        #logOutput, #model-display {
             width: 100%;
             height: 100%;
             border: 1px solid #eee;
@@ -264,17 +264,7 @@
             height: 40px;
             width: auto;
         }
-        #logOutput, #modelDisplay {
-            width: 100%;
-            height: 100%;
-            border: 1px solid #eee;
-            border-radius: 4px;
-            padding: 10px;
-            box-sizing: border-box;
-            font-family: monospace;
-            white-space: pre-wrap;
-            background-color: #fafafa;
-        }
+
         .result-content {
             flex: 1;
             overflow-y: auto;
@@ -288,18 +278,7 @@
             font-size: 14px;
             line-height: 1.5;
         }
-        .model-display {
-            border: 1px solid #e0e0e0;
-            min-height: 200px;
-            height: 300px; /* 固定高度 */
-            padding: 10px;
-            background-color: #fafafa;
-            border-radius: 8px;
-            transition: border-color 0.2s;
-        }
-        .model-display:hover {
-            border-color: #1976d2;
-        }
+    
     </style>
 </head>
 <body>
