--- a/10/index.html
+++ b/10/index.html
@@ -264,7 +264,7 @@
             height: 40px;
             width: auto;
         }
-        #logOutput, #modelDisplay {
+        #logOutput, #model-display {
             width: 100%;
             height: 100%;
             border: 1px solid #eee;
