--- a/11/index.html
+++ b/11/index.html
@@ -12,9 +12,11 @@
         }
 
         body {
-            font-family: Arial, sans-serif;
+            margin: 0;
             padding: 20px;
-            background-color: #f0f2f5;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
         }
 
         .container {
@@ -237,17 +239,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 20px;
-            margin-bottom: 20px;
+            padding: 16px 24px;
+            margin-bottom: 24px;
             background: white;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            border-radius: 8px;
-        }
-
-        .title {
-            font-size: 24px;
-            color: #333;
-            margin: 0;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+            border-radius: 12px;
         }
 
         .logo {
@@ -360,7 +356,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">算法移植结果验证分析组件（应用级验证）</h1>
+        <h1>算法移植结果验证分析组件<br>（应用级验证）</h1>
         <img src="logo.png" alt="Logo" class="logo">
     </div>
 
